[gd_scene load_steps=31 format=3 uid="uid://ctdbu511qitd4"]

[ext_resource type="PackedScene" uid="uid://cufn7ji82vhtv" path="res://Resources/Models/Commando/RaptorCommando.glb" id="1_viyl2"]
[ext_resource type="Script" uid="uid://bbnl05dkl5qhi" path="res://Player/Player.gd" id="1_wvw08"]
[ext_resource type="Animation" uid="uid://7g0ubk8husx8" path="res://Resources/Models/Commando/Animations/idle.res" id="3_srsud"]
[ext_resource type="Script" uid="uid://d00sa1351u1tf" path="res://Player/gun_anim.gd" id="3_uylya"]
[ext_resource type="Animation" uid="uid://c3d122hg1kclu" path="res://Resources/Models/Commando/Animations/run_back.res" id="4_y20d2"]
[ext_resource type="Animation" uid="uid://cltk3o58w3462" path="res://Resources/Models/Commando/Animations/run_forward.res" id="5_c5hrw"]
[ext_resource type="Animation" uid="uid://bv2rdkwrpc12f" path="res://Resources/Models/Commando/Animations/walk_back.res" id="6_m7nl1"]
[ext_resource type="Animation" uid="uid://bs4nduj1dwvph" path="res://Resources/Models/Commando/Animations/walk_forward.res" id="7_jrcwe"]
[ext_resource type="Script" uid="uid://357lpakq8lhj" path="res://Player/player_hurtbox.gd" id="8_4ln2a"]

[sub_resource type="BoxShape3D" id="BoxShape3D_k3bea"]
size = Vector3(0.486069, 2.46921, 3.21036)

[sub_resource type="Animation" id="Animation_gaiug"]
length = 0.001
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RaptorCommando_001/Skeleton3D/Cylinder_001/GunMarker")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, -0.265377, 3.88035, 4.46398)
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../WalkGroundMarker")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0, 0)
tracks/2/type = "position_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%WalkGroundMarker")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 0.338246, 0, 0)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v34j5"]
_data = {
&"RESET": SubResource("Animation_gaiug"),
&"idle": ExtResource("3_srsud"),
&"run_back": ExtResource("4_y20d2"),
&"run_forward": ExtResource("5_c5hrw"),
&"walk_back": ExtResource("6_m7nl1"),
&"walk_forward": ExtResource("7_jrcwe")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_37xw8"]
animation = &"idle"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_qdjco"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_jutuy"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_pp837"]

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_sckva"]
xfade_time = 0.1
input_0/name = "aiming"
input_0/auto_advance = false
input_0/break_loop_at_end = false
input_0/reset = true
input_1/name = "not_aiming"
input_1/auto_advance = false
input_1/break_loop_at_end = false
input_1/reset = true

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_fxukp"]
filters = ["", "RaptorCommando_001/Skeleton3D:ArmConnector.l", "RaptorCommando_001/Skeleton3D:ArmConnector.r", "RaptorCommando_001/Skeleton3D:Foot.l", "RaptorCommando_001/Skeleton3D:Hand.l", "RaptorCommando_001/Skeleton3D:Hand.r", "RaptorCommando_001/Skeleton3D:HandIK.l", "RaptorCommando_001/Skeleton3D:HandIK.r", "RaptorCommando_001/Skeleton3D:Head", "RaptorCommando_001/Skeleton3D:Hip", "RaptorCommando_001/Skeleton3D:LegConnector.l", "RaptorCommando_001/Skeleton3D:LegConnector.r", "RaptorCommando_001/Skeleton3D:LegPinIK.l", "RaptorCommando_001/Skeleton3D:LegPinIK.r", "RaptorCommando_001/Skeleton3D:LegPoleIK.l", "RaptorCommando_001/Skeleton3D:LegPoleIK.r", "RaptorCommando_001/Skeleton3D:LowerArm.l", "RaptorCommando_001/Skeleton3D:LowerArm.r", "RaptorCommando_001/Skeleton3D:LowerJaw", "RaptorCommando_001/Skeleton3D:LowerLeg.l", "RaptorCommando_001/Skeleton3D:LowerLeg.r", "RaptorCommando_001/Skeleton3D:MidLeg.l", "RaptorCommando_001/Skeleton3D:MidLeg.r", "RaptorCommando_001/Skeleton3D:Neck", "RaptorCommando_001/Skeleton3D:Tail_1", "RaptorCommando_001/Skeleton3D:Tail_10", "RaptorCommando_001/Skeleton3D:Tail_11", "RaptorCommando_001/Skeleton3D:Tail_2", "RaptorCommando_001/Skeleton3D:Tail_3", "RaptorCommando_001/Skeleton3D:Tail_4", "RaptorCommando_001/Skeleton3D:Tail_5", "RaptorCommando_001/Skeleton3D:Tail_6", "RaptorCommando_001/Skeleton3D:Tail_7", "RaptorCommando_001/Skeleton3D:Tail_8", "RaptorCommando_001/Skeleton3D:Tail_9", "RaptorCommando_001/Skeleton3D:Tongue", "RaptorCommando_001/Skeleton3D:Torso", "RaptorCommando_001/Skeleton3D:UpperArm.l", "RaptorCommando_001/Skeleton3D:UpperArm.r", "RaptorCommando_001/Skeleton3D:UpperLeg.l", "RaptorCommando_001/Skeleton3D:UpperLeg.r", "RaptorCommando_001/Skeleton3D:UpperTorso"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4yf2c"]
animation = &"run_forward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8y36q"]
animation = &"run_forward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8cvrk"]
animation = &"run_forward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rng66"]
animation = &"run_back"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_dm2pu"]
blend_point_0/node = SubResource("AnimationNodeAnimation_4yf2c")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_8y36q")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_8cvrk")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_rng66")
blend_point_3/pos = Vector2(0, -1)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_c8lwx"]
animation = &"walk_forward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0shwt"]
animation = &"walk_back"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_d5vn4"]
animation = &"walk_forward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_frfbk"]
animation = &"walk_forward"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_5wtbc"]
blend_point_0/node = SubResource("AnimationNodeAnimation_c8lwx")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_0shwt")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_d5vn4")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_frfbk")
blend_point_3/pos = Vector2(1, 0)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_gub5u"]
graph_offset = Vector2(-73.3636, -169.818)
nodes/Animation/node = SubResource("AnimationNodeAnimation_37xw8")
nodes/Animation/position = Vector2(400, -60)
nodes/IdleTime/node = SubResource("AnimationNodeTimeScale_qdjco")
nodes/IdleTime/position = Vector2(620, -80)
nodes/RunTime/node = SubResource("AnimationNodeTimeScale_jutuy")
nodes/RunTime/position = Vector2(620, 280)
nodes/WalkTime/node = SubResource("AnimationNodeTimeScale_pp837")
nodes/WalkTime/position = Vector2(620, 80)
nodes/aim_transition/node = SubResource("AnimationNodeTransition_sckva")
nodes/aim_transition/position = Vector2(840, 120)
nodes/idle_move/node = SubResource("AnimationNodeBlend2_fxukp")
nodes/idle_move/position = Vector2(1040, 60)
nodes/output/position = Vector2(1240, 60)
nodes/run/node = SubResource("AnimationNodeBlendSpace2D_dm2pu")
nodes/run/position = Vector2(400, 280)
nodes/walk/node = SubResource("AnimationNodeBlendSpace2D_5wtbc")
nodes/walk/position = Vector2(400, 80)
node_connections = [&"IdleTime", 0, &"Animation", &"RunTime", 0, &"run", &"WalkTime", 0, &"walk", &"aim_transition", 0, &"WalkTime", &"aim_transition", 1, &"RunTime", &"idle_move", 0, &"IdleTime", &"idle_move", 1, &"aim_transition", &"output", 0, &"idle_move"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8bjpp"]
radius = 0.348783
height = 2.23445

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("skeleton")]
collision_layer = 2
script = ExtResource("1_wvw08")
walkingSpeed = 8.0
runningSpeed = 12.0
skeleton = NodePath("RaptorCommando/RaptorCommando_001/Skeleton3D")

[node name="ManShootCooldownTimer" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0
wait_time = 0.15

[node name="AutoShootTimer" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0
wait_time = 0.2

[node name="ReloadTimer" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="StunTimer" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="RaptorCommando" parent="." instance=ExtResource("1_viyl2")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)

[node name="Skeleton3D" parent="RaptorCommando/RaptorCommando_001" index="0"]
bones/0/position = Vector3(-0.0016945, 3.06787, 0.643858)
bones/0/rotation = Quaternion(1.60095e-07, -0.569149, 0.822234, -1.10817e-07)
bones/1/rotation = Quaternion(0.0179994, 0.0526421, 0.99819, 0.0228216)
bones/2/rotation = Quaternion(0.0213666, 0.998247, -0.0551872, -0.000676242)
bones/3/rotation = Quaternion(-0.02061, 0.930572, 0.365118, -0.0173106)
bones/4/enabled = false
bones/4/rotation = Quaternion(-0.14041, -0.0487577, 0.0190041, 0.98871)
bones/6/position = Vector3(-0.0045662, 0.403333, 0.363421)
bones/6/rotation = Quaternion(0.0128215, 0.858038, 0.51341, 0.00406152)
bones/7/position = Vector3(0.00574708, 0.590108, 0.658294)
bones/7/rotation = Quaternion(0.0127975, 0.797718, 0.602804, 0.0104949)
bones/8/rotation = Quaternion(0.502267, -0.548513, -0.497354, -0.446655)
bones/9/rotation = Quaternion(-0.285062, 0.242393, -0.586365, 0.718444)
bones/10/rotation = Quaternion(0.757624, 0.00745771, -0.11835, 0.641828)
bones/10/scale = Vector3(1, 0.999985, 1.00001)
bones/11/rotation = Quaternion(0.532287, 0.509149, 0.471089, -0.485298)
bones/12/rotation = Quaternion(-0.304451, -0.284735, 0.570441, 0.707695)
bones/13/rotation = Quaternion(0.631997, -0.00480411, 0.0800138, 0.770815)
bones/13/scale = Vector3(1, 0.999985, 1.00002)
bones/14/rotation = Quaternion(0.0242264, 0.989485, -0.141978, 0.0131982)
bones/15/rotation = Quaternion(0.0177896, 8.43396e-05, -0.00193069, 0.99984)
bones/16/rotation = Quaternion(-0.0176389, 0.000153526, -0.00723899, 0.999818)
bones/17/rotation = Quaternion(0.0435713, 0.000863186, -0.0132411, 0.998962)
bones/18/rotation = Quaternion(-0.0390027, -7.73008e-05, -0.024202, 0.998946)
bones/19/rotation = Quaternion(-0.0274583, 0.000415256, -0.0241875, 0.99933)
bones/20/rotation = Quaternion(0.0547101, 0.00239107, -0.0259922, 0.998161)
bones/21/rotation = Quaternion(0.00116677, 0.000654659, -0.0429624, 0.999076)
bones/22/rotation = Quaternion(0.0535441, 0.00448779, -0.079037, 0.995423)
bones/23/rotation = Quaternion(-0.0824695, 0.00640442, 0.0676562, 0.994274)
bones/24/rotation = Quaternion(-0.0465124, 0.00298777, 0.035724, 0.998274)
bones/25/rotation = Quaternion(0.440147, -0.484947, 0.576216, 0.48895)
bones/26/rotation = Quaternion(0.0591954, -0.0759017, -0.730046, 0.676585)
bones/27/rotation = Quaternion(-0.567958, -0.000818995, 0.00575963, 0.823037)
bones/28/rotation = Quaternion(0.765334, -0.00258144, 0.00313823, 0.643621)
bones/29/rotation = Quaternion(0.445113, 0.476386, -0.564031, 0.506754)
bones/30/rotation = Quaternion(-0.0726286, -0.0653755, 0.735137, 0.670839)
bones/31/rotation = Quaternion(-0.339307, -1.63607e-06, -4.93848e-07, 0.940676)
bones/32/rotation = Quaternion(0.371483, -3.29148e-07, -1.86576e-08, 0.92844)
bones/33/position = Vector3(0.539369, 2.26301, 2.31604)
bones/33/rotation = Quaternion(0.000687271, 0.782563, 0.622572, -5.38573e-05)
bones/34/rotation = Quaternion(-0.694079, 0.043467, 0.0250201, 0.71815)
bones/35/position = Vector3(0.732446, 0.563073, 0.379228)
bones/35/rotation = Quaternion(-0.599712, 0.422817, -0.542181, 0.409403)
bones/36/rotation = Quaternion(-0.699136, 2.52103e-08, 0.714989, -5.65331e-10)
bones/37/position = Vector3(0.611549, 1.14978, -0.867446)
bones/38/position = Vector3(-0.407561, 2.0248, 2.25766)
bones/38/rotation = Quaternion(-1.29254e-07, 0.663836, 0.747878, -1.45617e-07)
bones/39/rotation = Quaternion(-0.68694, 0.0305387, 0.0322913, 0.725354)
bones/40/position = Vector3(-0.615125, 0.0219894, -0.480493)
bones/40/rotation = Quaternion(-0.505626, -0.494368, 0.494312, 0.505568)
bones/42/position = Vector3(-0.614938, 0.905194, -1.11786)
bones/42/rotation = Quaternion(1.37679e-07, 0.707107, -0.707107, -1.37679e-07)

[node name="Cylinder_001" parent="RaptorCommando/RaptorCommando_001/Skeleton3D" index="1"]
script = ExtResource("3_uylya")

[node name="GunMarker" type="Marker3D" parent="RaptorCommando/RaptorCommando_001/Skeleton3D/Cylinder_001" index="0"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.265377, 3.88035, 4.46398)

[node name="CasingsMarker" type="Marker3D" parent="RaptorCommando/RaptorCommando_001/Skeleton3D/Cylinder_001/GunMarker"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.488773, -1.88026)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0192187, 1.29062, 0.097489)
shape = SubResource("BoxShape3D_k3bea")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../RaptorCommando")
libraries = {
&"": SubResource("AnimationLibrary_v34j5")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../RaptorCommando")
tree_root = SubResource("AnimationNodeBlendTree_gub5u")
anim_player = NodePath("../AnimationPlayer")
parameters/IdleTime/scale = 1.0
parameters/RunTime/scale = 1.0
parameters/WalkTime/scale = 1.0
parameters/aim_transition/current_state = "not_aiming"
parameters/aim_transition/transition_request = ""
parameters/aim_transition/current_index = 1
parameters/idle_move/blend_amount = 0.5
parameters/run/blend_position = Vector2(0.00330579, 0.987474)
parameters/walk/blend_position = Vector2(-0.0181818, 0.949367)

[node name="Hurtbox" type="Area3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
collision_layer = 8
collision_mask = 0
script = ExtResource("8_4ln2a")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hurtbox"]
transform = Transform3D(1, 0, 0, 0, 0.60364, 0.797258, 0, -0.797258, 0.60364, 0, 1.48818, -0.394114)
shape = SubResource("CapsuleShape3D_8bjpp")

[node name="SoundTimers" type="Node" parent="."]

[node name="MoveSoundTimer" type="Timer" parent="SoundTimers"]
unique_name_in_owner = true
process_callback = 0
wait_time = 0.3
one_shot = true

[node name="RoarTimer" type="Timer" parent="SoundTimers"]
unique_name_in_owner = true
process_callback = 0
wait_time = 10.0

[node name="AudioListener3D" type="AudioListener3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2, 1)
rotation_order = 3
current = true

[node name="WalkGroundMarker" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.338246, 0, 0)

[connection signal="reloading_gun" from="." to="RaptorCommando/RaptorCommando_001/Skeleton3D/Cylinder_001" method="_on_player_reloading_gun"]
[connection signal="shot_gun" from="." to="RaptorCommando/RaptorCommando_001/Skeleton3D/Cylinder_001" method="_on_player_shot_gun"]
[connection signal="timeout" from="ManShootCooldownTimer" to="." method="_on_man_shoot_cooldown_timer_timeout"]
[connection signal="timeout" from="AutoShootTimer" to="." method="_on_auto_shoot_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]
[connection signal="got_hit" from="Hurtbox" to="." method="_on_hurtbox_got_hit"]
[connection signal="timeout" from="SoundTimers/MoveSoundTimer" to="." method="_on_move_sound_timer_timeout"]
[connection signal="timeout" from="SoundTimers/RoarTimer" to="." method="_on_roar_timer_timeout"]

[editable path="RaptorCommando"]
